🐛 fix(style): resolve scrollbar issue and adjust padding
- remove "overflow:hidden" to fix scrollbar
- adjust padding for better UI

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,6 @@
 }
 
 body{
-  overflow: hidden;
+  /* overflow: hidden; */
   scrollbar-width: none;
 }
